--- a/src/componenets/Hero/Hero.css
+++ b/src/componenets/Hero/Hero.css
@@ -5,7 +5,7 @@
 }
 
 .heroPic {
-    width: 520px;
-    max-width: 520px;
+    width: 35%;
+    /* max-width: 520px; */
     border-radius: 20px;
 }
